# bram-inferno

./: LICENSE  README.md  pyproject.toml  setup.py
newbie/: __init__.py  analysis.py  estimators.py  evidence.py  inferencedata.py  kernels.py  metrics.py  observables.py  plot_utils.py  wastebin.py
scripts/: __init__.py  create_synthetic_evidence.py  evaluate_posteriors.py  plot_confusion_matrix.py  plot_inferencedata.py
tests/: analysis_test.py  conftest.py  estimator_test.py  evidence_test.py  inferencedata_test.py  kernels_test.py  metric_test.py  wastebin_test.py
tests/test-data/: inference_data.json  inference_data_2.json  synthetic_truth.csv
tests/test-data/classification/: idata_categorical_label1_0239.json  idata_categorical_label1_0252.json  idata_categorical_label1_0298.json  idata_categorical_label1_0307.json  idata_categorical_label1_0465.json  idata_categorical_label1_0477.json  idata_categorical_label1_0491.json  idata_categorical_label1_0561.json  idata_categorical_label1_0569.json  idata_categorical_label1_0575.json  idata_categorical_label2_0681.json  idata_categorical_label2_0690.json  idata_categorical_label2_0725.json  idata_categorical_label2_0757.json  idata_categorical_label2_0856.json  idata_categorical_label2_0870.json  idata_categorical_label2_0874.json  idata_categorical_label2_0910.json  idata_categorical_label2_0916.json  idata_categorical_label2_0995.json
